updates for migrating darwin and crdb to java11 pom changes for pulling moved dependencies changes to java args to silence warnings